@@ -1,0 +1,24 @@
+<html>
+<head>
+  <title>Structured HTML page</title>
+  <!-- See http://dublincore.org/documents/dcmi-terms/ and http://dublincore.org/documents/dcq-html/ -->
+  <meta name="DC.creator" content="Ingo Feinerer"/>
+  <meta name="DC.description" content="A place for descriptions"/>
+  <meta name="DC.date" content="2001-12-15T08:49:37+02:00"/>
+  <meta name="DC.publisher" content="A place for publisher and origin"/>
+  <meta name="DC.language" content="en"/>
+</head>
+<body>
+<p>This is an example page as input for the <i>readHTML</i> reader.</p>
+<h1>First big heading</h1>
+<p>The structure is defined by <strong>h1</strong> headings with some
+  text, sometimes with additional tags, like <b>bold</b>
+  or <u>underlined</u> annotations, in between.</p>
+<h1>Second big heading</h1>
+<p>with even more text.</p>
+<h2>Smaller headings</h2>
+<p>
+are not considered for the structure.
+</p>
+</body>
+</html>
