@@ -1,5 +1,7 @@
 2007-07-14  Ingo Feinerer  <h0125130@wu-wien.ac.at>
 
+	* R/reader.R (readHTML): Added very simple HTML reader to obtain StructuredTextDocuments.
+
 	* R/reader.R (readPDF): Added PDF reader.
 
 2007-07-13  Ingo Feinerer  <h0125130@wu-wien.ac.at>
